# tir-api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  test.js
src/: config.rs  lib.rs  main.rs
src/http/: extractors.rs  mod.rs  users.rs  validation.rs
src/http/thematics/: mod.rs  structs.rs  thematics.rs
src/http/users/: mod.rs  structs.rs  users.rs  utils.rs
src/knowledge/: mod.rs
