[package]
name = "tir-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
env_logger = "0.10.0"
mongodb = "2.6.1"
clap = { version = "4.0.0", features = ["derive", "env"] }
anyhow = "1.0.75"
tower-http = { version = "0.4.3", features = ["trace"] }
serde_yaml = "0.9.24"
tir-engine = { path = "../tir-engine" }
indicatif = "0.17.6"
validator = {version= "0.16.1", features = ["derive"]}
thiserror =  "1.0.48"
